EHO-364 numeric right aligned fields fix

--- a/eHour-web/src/main/webapp/css/ehour.css
+++ b/eHour-web/src/main/webapp/css/ehour.css
@@ -844,7 +844,7 @@ hr {
 
 .entrySelectorTable .numeric {
     text-align: right;
-    padding-right: 5px
+    padding-right: 2em;
 }
 
 .floatLeft {
